--- a/calculator.html
+++ b/calculator.html
@@ -19,6 +19,10 @@
         var num = document.getElementById("n1");
         num.value = Math.sin(num.value);
       }
+      function cuadruple() {
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 4);
+      }
     </script>
   </head>
   <body>
@@ -30,6 +34,7 @@
       <button onclick="cube()"> x^3 </button>
       <button onclick="inverso()"> 1/x </button>
       <button onclick="sin()"> sin(x) </button>
+      <button onclick="cuadruple()"> x^4 </button>
     </p>
   </body>
 </html>
