--- a/calculator.html
+++ b/calculator.html
@@ -3,6 +3,10 @@
   <head>
     <title>Calculator</title><meta charset="utf-8">
     <script type="text/javascript">
+      function cuadrado() {
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 2);
+      }
       function cube() {
         var num = document.getElementById("n1");
         num.value = Math.pow(num.value, 3);
@@ -14,6 +18,7 @@
     Number:
     <input type="text" id="n1">
     <p>
+      <button onclick="cuadrado()"> x^2 </button>
       <button onclick="cube()"> x^3 </button>
     </p>
   </body>
